# claravid_code

./: LICENSE  README.md  pyproject.toml
.github/workflows/: pypi_upload.yml
claravid/: __init__.py  dataset.py  io_utils.py  scene_complexity_profile.py
examples/: demo.ipynb  pcl_project.py  pcl_projection.py
scripts/: compute_complexity_profile.py
