[project]
name = "claravid"
version = "0.1.0"
description = "Utilities for handling ClaraVid dataset"
authors = [{ name = "Radu Beche", email = "radu.beche@cs.utcluj.ro" }]
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"

dependencies = [
    "numpy",
    "pillow"
]

[project.optional-dependencies]
dev = [
    "jupyterlab",
    "pytest",
    "matplotlib",
    "open3d",
]
examples = [
    "open3d",
    "jupyterlab",
    "matplotlib",
]

[project.urls]
Homepage = "https://github.com/rdbch/claravid_code"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
  "claravid/**/*"
]
