[project]
name = "claravid"
version = "0.2.0"
description = "Utilities for handling ClaraVid dataset"
authors = [{ name = "Radu Beche", email = "radu.beche@cs.utcluj.ro" }]
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"

dependencies = [
    "numpy",
    "pillow",
]

[project.optional-dependencies]
dsp = [
    "opencv-python",
    "tqdm",
    "scipy",
    "scikit-image",
    "seaborn",
    "matplotlib",
]

all = [
    "opencv-python",
    "tqdm",
    "scipy",
    "scikit-image",
    "seaborn",
    "matplotlib",
    "jupyterlab",
    "open3d",
]

[project.urls]
Homepage = "https://github.com/rdbch/claravid_code"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
  "claravid/**/*"
]
